# psqlparse2

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: workflow.yml
src/pg_query/: __init__.pxd  __init__.py  __init__.pyi
src/psqlparse2/: __init__.py  __init__.pyi
src/psqlparse2/pb/: pg_query_pb2.py  pg_query_pb2.pyi
tests/: test_pg_query.py
