[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "Cython(>=Cython==3.0.10,<3.1)",
    "setuptools_scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "psqlparse2"
description = "libpg_query wrapper for Python"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name = "Dani Maarouf", email = "dmaarouf@cisco.com"}
]
requires-python = '>=3.8.0'
license = {file = "LICENSE"}
keywords = ["database", "postgres", "sql", "parser", "libpg_query", "pg_query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: SQL",
    "Topic :: Database :: Front-Ends",
]
dependencies = [
    "protobuf>=4.21.6, <5.0",
    "types-protobuf>=4.21.6, <5.0",
]

[project.urls]
Repository = "https://github.com/dani-maarouf/psqlparse2"

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pytest>=8.2, <9",
    "pytest-cov>=5.0.0, <6",
    "grpcio-tools>=1.60.0, <1.70",
]

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.mypy]
implicit_reexport = true
warn_return_any = true
warn_unused_configs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
ignore_missing_imports = false
follow_imports = "normal"
exclude = [
    '^setup\.py$',
    '^build.*$',
    '^dist\/',
    '.*\.egg-info\/',
]

[[tool.mypy.overrides]]
module = "psqlparse2.pb.pg_query_pb2"
disallow_any_generics = false

[tool.setuptools]
zip-safe = false

[tool.setuptools_scm]


[tool.setuptools.packages.find]
where = ["src"]
include = ["psqlparse2*"]
namespaces = false

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h"]
